## Process this file with automake to produce Makefile.in

if GAP_AUDIO_SUPPORT
LIBWAVCLIENT=libwavplayclient
endif

SUBDIRS = images $(LIBWAVCLIENT) gap po

EXTRA_DIST = \
	AUTHORS			\
	COPYING			\
	INSTALL			\
	README			\
	ChangeLog		\
	ChangeLog.pre-1-2	\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

